Bug 86795 - Crash when clicking on fieldmarks in particular document
Summary: Crash when clicking on fieldmarks in particular document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.4.0.0.beta3 target:4.3.5
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2014-11-27 17:07 UTC by jose javier
Modified: 2016-06-22 09:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
document from bank to fill (39.68 KB, application/vnd.oasis.opendocument.text)
2014-11-27 17:07 UTC, jose javier
Details
bt (6.43 KB, text/plain)
2014-11-27 22:20 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jose javier 2014-11-27 17:07:17 UTC
Created attachment 110135 [details]
document from bank to fill

With Libreoffice  4.2.7.2 on Fedora 20 x86_64 and Libreoffice 4.3.4.1 on Windows 7, it segfault when left click with the mouse in some parts of the document. For example in Paragraph with the text "FINANCIACION TRANSFERENCIA SWIFT IMPORTACION ......". Libreoffice just die immediatly, it does the same in other parts of the document.
Comment 1 Julien Nabet 2014-11-27 22:13:37 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this ;
I had a "std::bad_cast".
But I couldn't get a bt :-(

Michael: I noticed that the only possible call location of this, since the crash is on Writer, is sw/source/filter/ww8/writerhelper.hxx but then how to investigate to find the root cause?
Comment 2 Julien Nabet 2014-11-27 22:20:48 UTC
Created attachment 110150 [details]
bt

Sorry Michael for pinging, I just remembered there was a way on gdb to break when throwing and rediscovered "catch throw" :-)
Comment 3 Michael Stahl 2014-12-05 17:23:35 UTC
crashes already in OOo 3.3

the ODF import creates a questionable fieldmark that has the type name of a checkbox but the wrong class - fixed on master.
Comment 4 Commit Notification 2014-12-05 17:24:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25fd11e78279aef5a6b7656347758e5c67a9c45a

fdo#86795: xmloff: ODF import: do not import checkbox fieldmark ...

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-12-05 17:26:25 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b350a0a6f93fcd61c1ece112bd9a62d55cdeee6&h=libreoffice-4-4

fdo#86795: xmloff: ODF import: do not import checkbox fieldmark ...

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-12-08 10:22:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b903e2a7ac730865d9a6ee48fb0392ecff2c7d30&h=libreoffice-4-3

fdo#86795: xmloff: ODF import: do not import checkbox fieldmark ...

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-12-08 21:03:59 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1317e958f2195e2b05cdf72ca5eb1c04e64dc1bd&h=libreoffice-4-3-5

fdo#86795: xmloff: ODF import: do not import checkbox fieldmark ...

It will be available in 4.3.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.