fdo#86795: xmloff: ODF import: do not import checkbox fieldmark ...

... if it has start/end, because Writer will become grumpy and crash.

Change-Id: I6024051249eeac6ed9e43856fa77db969287f888
(cherry picked from commit 25fd11e78279aef5a6b7656347758e5c67a9c45a)